--- a/models/Stage/sources.yml
+++ b/models/Stage/sources.yml
@@ -14,8 +14,8 @@ sources:
 
         config:
           freshness:
-            warn_after: {count: 1, period: hour}
-            error_after: {count: 2, period: hour}
+            warn_after: {count: 10, period: day}
+            error_after: {count: 10, period: day}
           loaded_at_field: o_orderdate::timestamp_ntz
       - name: lineitems
       - name: parts
